[package]

name = "mesocarp"
authors = ["Mesocarp"]
description = "Lock-free concurrency, synchronization, scheduling, and logging primitives in Rust"
edition = "2021"
keywords = ["concurrency", "synchronization", "scheduling", "logging"]
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/TheMesocarp/mesocarp"
version = "0.1.0"

[dependencies]
array-init = "2.1.0"
thiserror = "2.0.12"
