[package]

authors     = ["Mesocarp"]
description = "Lock-free concurrency, synchronization, scheduling, and logging primitives in Rust"
edition     = "2021"
homepage    = "https://github.com/TheMesocarp/mesocarp"
keywords    = ["concurrency", "synchronization", "scheduling", "logging"]
license     = "AGPL-3.0"
name        = "mesocarp"
readme      = "README.md"
repository  = "https://github.com/TheMesocarp/mesocarp"
version     = "0.4.0"

[dependencies]
array-init = "2.1.0"
bytemuck   = "1.23.0"
thiserror  = "2.0.12"
