[package]

authors     = ["Mesocarp"]
description = "High-performance concurrency, synchronization, scheduling, and logging primitives in Rust"
edition     = "2021"
homepage    = "https://github.com/TheMesocarp/mesocarp"
keywords    = ["concurrency", "synchronization", "scheduling", "logging"]
license     = "LGPL-2.1"
name        = "mesocarp"
readme      = "README.md"
repository  = "https://github.com/TheMesocarp/mesocarp"
version     = "0.9.2"

[dependencies]
array-init = "2.1.0"
bytemuck   = "1.23.1"
thiserror  = "2.0.12"
